refactor: search POST, clerk org API, reaction counts, security simplification
- Search endpoint: POST /v1/post/search with @RequestBody (was GET with query params)
- GenericPageableRequest: limit → size (Spring convention)
- RoleUtils: checks 'org:admin' (Clerk org role format, not 'admin')
- Clerk org membership: clerk.organizationMemberships().list() with organizationId config
- PostEntity: @ManyToMany EAGER for authors/tags/projects (small, always needed)
- PostEntity: @Formula for reactionCount (sum of love+celebrate+genius+help)
- PostRepository: native query with :sort param for dynamic sort, includes reactionCount column
- PostOutput: mapSortProperty returns full sort clause with direction
- SecurityConfig: simplified to anyRequest().permitAll() with specific auth for GET /v1/post/*
- PostModel/Response: added reactionCount field
- AuthorResponse: added slug field
- application.yaml: added clerk.organization-id config