@@ -1,17 +1,20 @@
 package dev.vitorpaulo.blog.output.author;
 
 import com.clerk.backend_api.Clerk;
+import com.clerk.backend_api.models.operations.ListOrganizationMembershipsRequest;
 import dev.vitorpaulo.blog.common.exception.InternalException;
 import dev.vitorpaulo.blog.domain.AuthorEntity;
 import dev.vitorpaulo.blog.output.mapper.AuthorMapper;
 import dev.vitorpaulo.blog.model.AuthorModel;
 import dev.vitorpaulo.blog.repository.AuthorRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.stereotype.Component;
 
 import java.util.Collections;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
@@ -20,6 +23,9 @@ public class AuthorOutput {
     private final AuthorRepository authorRepository;
     private final AuthorMapper authorMapper;
 	private final Clerk clerk;
+
+	@Value("${clerk.organization-id}")
+	private String organizationId;
 
     public AuthorModel getAuthor(Jwt principal) {
 		final var user = clerk.users()
@@ -33,11 +39,17 @@ public class AuthorOutput {
 		author.setAvatarUrl(user.imageUrl().orElse(null));
 		authorRepository.save(author);
 
-		final var organization = user.organizationMemberships()
-			.orElse(Collections.emptyList())
+		final var organization = clerk.organizationMemberships()
+			.list(ListOrganizationMembershipsRequest.builder()
+				.userId(List.of(user.id()))
+				.organizationId(organizationId)
+				.build())
+			.organizationMemberships()
+			.orElseThrow(InternalException::new)
+			.data()
 			.stream()
 			.findFirst()
 			.orElseThrow(InternalException::new);
-		return authorMapper.toModel(author, organization.role());
+		return authorMapper.toModel(author, organization.roleName().orElseThrow(InternalException::new));
     }
 }
